# brainformr

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini
.github/workflows/: docs.yml  test.yml
analysis/: index.html
brainformr/: __init__.py  _version.py  car.py
brainformr/analysis_utils/: __init__.py  crosscorr.py
brainformr/data/: __init__.py  attn_loader.py  loader copy.py  loader.py  loader_pandas.py  loader_polars.py  old.py
brainformr/model/: __init__.py  base.py  blocks.py  ct.py  factory.py
brainformr/training/: scheduler.py
data/: index.html
docs/: analysis.md  data.md  index.md  model.md  requirements.txt  usage.md  vehicle.md  zhuang_abc.md
docs_scripts/: gen_ref_pages copy.py  gen_ref_pages.py
model/: index.html
notebooks/: cluster_and_visualize.ipynb  count_celltypes_per_region.ipynb  smooth_embeddings.ipynb
reference/SUMMARY/: index.html
reference/analysis_utils/: index.html
reference/analysis_utils/crosscorr/: index.html
reference/data/: index.html
reference/data/_loader_polars/: index.html
reference/data/attn_loader/: index.html
reference/data/loader_pandas/: index.html
reference/model/: index.html
reference/model/base/: index.html
reference/model/blocks/: index.html
reference/model/ct/: index.html
reference/model/factory/: index.html
reference/training/scheduler/: index.html
scripts/: cluster.py  embed_langlieb.sh  embeds_from_files.py  embeds_from_files_langlieb.py  ernie_rna_probe_embeds.py  extract_celltype_composition.py  get_cds_from_fa.py  make_images.py  probe_fasta_from_ad.py  rename.py  smooth.py
scripts/config/: aibs1.yaml  example.yaml  langlieb.yaml  mouse1.yaml  mouse_687997.yaml  zhuang.yaml
scripts/config/data/: langlieb.yaml  mouse1.yaml  mouse1_test.yaml  mouse2.yaml  zhuang.yaml  zhuang_test.yaml
scripts/training/: download_aibs.sh  lightning_model.py  sweep.yaml  train_687997.py  train_aibs_mouse.py  train_langlieb.py  train_zhuang.py
search/: search_index.json
tests/: test_data.py  test_model.py
usage/: index.html
zhuang_abc/: index.html
(+4 files in other folders)
